# Backpack

./: .gitignore  CMakeLists.txt  Item.c++  Item.h++  backpack.c++  backpack.cpp  backpack.h++  item.c++  item.h++  main.c++  main.cpp
include/: Johnson.h++  angle.h++  backpack.h++  distance.h++  graham_convex_hull.h++  is_dominant.h++  item.h++  pareto.h++  point.h++
src/: Johnson.c++  backpack.c++  example.c++  item.c++
